@@ -2,6 +2,7 @@ master
 - mayhem
   fix updater refreshing 404'd threads
   distinguishable unread favicons on white backgrounds
+  backlink formatting
 
 2.18.3
 - mayhem
